# python-wm

./: pyproject.toml
src/pdf-extractor/: 08_24.csv  09_24.csv  init.py  inity.ipynb  main.py  main_2.py  pdf_viz.py
src/pdf-extractor/configs/rules/: notes.py
src/pdf-extractor/files/: combined_data.csv  resultado_cip.csv
src/pdf-extractor/files/csv/: 09_24-2.xltx  09_24.csv
temp/: 07_24.csv
